@@ -1,5 +1,12 @@
 2008-11-12  Emmanuele Bassi  <ebassi@linux.intel.com>
 
+	* tests/conform/Makefile.am:
+	* tests/conform/test-conform-main.c:
+	* tests/conform/test-paint-opacity.c: Add test unit for label,
+	rectangle and paint opacity.
+
+2008-11-12  Emmanuele Bassi  <ebassi@linux.intel.com>
+
 	* clutter/cogl/cogl-color.h:
 	* clutter/cogl/cogl-path.h:
 	* clutter/cogl/cogl-types.h: 
